# tcgm

./: .gitignore  README.md  asset-manifest.json  beta_test_plan.md  docker-compose.yml  index.html  main.js  main.lua  package-lock.json  package.json
TCGM/: README.md  package-lock.json  package.json
TCGM/src/: TCGMCard.jsx  (+1 more)
UserInterface/: index.html  main.js  package.json  renderer.js  style.css
archive/: package.json
card-logic-creator/: CardCreatorApp.py  cards.json
card-logic-handler/: Program.cs  Test_engine.cs  card-logic-handler.csproj
css/: cardtype.css  component.css  styles.css
front/: .env  Dockerfile  package-lock.json  package.json
game_editor/: CMakeLists.txt  fragment_shader.glsl  vertex_shader.glsl
game_editor/src/: Application.cpp  Application.h  SandboxApp.cpp  addCard.cpp  background.cpp  card.cpp  card.hpp  config_card.txt  loadFile.cpp  main.cpp  mouseEventHandler.cpp  mouseEventHandler.h  shaders.cpp  tcgmpch.h
game_editor/src/Events/: ApplicationEvent.h  Event.h  KeyEvent.h  MouseEvent.h
html/: card_editor.html  cardtype.html  component-selection.html  index.html
js/: button.js  button.json  card.js  card.json  cardtype.js  component.js  main.js  package.js  preload.js  utils.js
network/: .gitignore  Makefile  README.md  client  client.cpp  gui.cpp  json.cpp  server  server.cpp
networking/: README.md
packageManager/: assets.lua
src/: component-selection.html  docker-compose.yml  index.html  main.lua  package_game.lua
test/: HelloWorldGame.love  main.lua  package_game.lua
tests/: requirements.txt  utils.test.js
(+1975 files in other folders)
